@startuml
'https://plantuml.com/class-diagram
abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft
{
    # maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int increase):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
    + {abstract} getDirection():int
    + {abstract} getShootNum():int
    + {abstract} getPower():int
}

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + getDirection():int
    + getShootNum():int
    + getPower():int
    + setShootNum(int num):void
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + getDirection():int
    + getShootNum():int
    + getPower():int
}
AbstractAircraft <|-- MobEnemy

class EliteEnemy {
    - shootNum:int
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + getDirection():int
    + getShootNum():int
    + getPower():int
    + dropProp():BaseProp
}
AbstractAircraft <|-- EliteEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet

abstract class BaseProp {
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + {abstract} effect(HeroAircraft heroAircraft, List<EliteEnemy> eliteEnemies, List<BaseBullet> enemyBullets):void
}

class HpSupply {
    - hpIncrease:int
    + HpSupply(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft, List<EliteEnemy> eliteEnemies, List<BaseBullet> enemyBullets):void
}

class FireSupply {
    + FireSupply(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft, List<EliteEnemy> eliteEnemies, List<BaseBullet> enemyBullets):void
}

class BombSupply {
    + BombSupply(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft, List<EliteEnemy> eliteEnemies, List<BaseBullet> enemyBullets):void
}

BaseProp <|-- HpSupply
BaseProp <|-- FireSupply
BaseProp <|-- BombSupply
AbstractFlyingObject <|-- BaseProp

@enduml